--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,24 +6,36 @@ jobs:
     steps:
       - checkout
       - run: ./mvnw verify -Pintegration -Pjava6 -s nossl.settings.xml -Dnet.bytebuddy.test.ci=true -pl '!byte-buddy-gradle-plugin'
+    branches:
+      ignore:
+        - gh-pages
   jdk7:
     docker:
       - image: openjdk:7-jdk
     steps:
       - checkout
       - run: ./mvnw verify -Pintegration -Pjava7 -Dnet.bytebuddy.test.ci=true -pl '!byte-buddy-gradle-plugin'
+    branches:
+      ignore:
+        - gh-pages
   jdk8:
     docker:
       - image: openjdk:8-jdk
     steps:
       - checkout
       - run: ./mvnw verify -Pintegration -Pjava8 -Dnet.bytebuddy.test.ci=true -pl '!byte-buddy-gradle-plugin'
+    branches:
+      ignore:
+        - gh-pages
   coverage:
     docker:
       - image: openjdk:8-jdk
     steps:
       - checkout
       - run: ./mvnw jacoco:prepare-agent test jacoco:report coveralls:report -Pintegration -Dnet.bytebuddy.test.ci=true -DrepoToken=$COVERALLS_REPO_TOKEN -pl '!byte-buddy-gradle-plugin'
+    branches:
+      ignore:
+        - gh-pages
 workflows:
   version: 2
   build_all:
