--- a/byte-buddy-gradle-plugin/pom.xml
+++ b/byte-buddy-gradle-plugin/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>byte-buddy-parent</artifactId>
         <groupId>net.bytebuddy</groupId>
-        <version>1.9.10</version>
+        <version>1.9.11-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
