--- a/byte-buddy/pom.xml
+++ b/byte-buddy/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>net.bytebuddy</groupId>
         <artifactId>byte-buddy-parent</artifactId>
-        <version>1.9.12</version>
+        <version>1.9.13-SNAPSHOT</version>
     </parent>
 
     <artifactId>byte-buddy</artifactId>
