Remove experimental flag from J9 build which is running Java 11.

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ matrix:
     - env: TARGET='-Pjava11' EXPERIMENTAL='true'
       jdk: openjdk-ea
     # OpenJ9 11
-    - env: JDK="OpenJ9 11" TARGET='-Pjava11' EXPERIMENTAL='true'
+    - env: JDK="OpenJ9 11" TARGET='-Pjava11' EXPERIMENTAL='false'
       before_script:
         - . ci/install-jdk.sh -W ~/custom-java --url "https://api.adoptopenjdk.net/v2/binary/releases/openjdk11?openjdk_impl=openj9&os=linux&arch=x64&release=latest&type=jdk&heap_size=normal"
 
