--- a/.travis.yml
+++ b/.travis.yml
@@ -14,22 +14,22 @@ install: echo "The default Travis install script is being skipped!"
 
 matrix:
   include:
-    # Java 9
+    # OpenJDK - Java 9
     - env: TARGET='-Pjava9' EXPERIMENTAL='false'
       jdk: openjdk9
-    # Java 10
+    # OpenJDK - Java 10
     - env: TARGET='-Pjava10' EXPERIMENTAL='false'
       jdk: openjdk10
-    # Java 11
+    # OpenJDK - Java 11
     - env: TARGET='-Pjava11' EXPERIMENTAL='false'
       jdk: openjdk11
-    # Java 12
+    # OpenJDK - Java 12
     - env: TARGET='-Pjava11' EXPERIMENTAL='true'
       jdk: openjdk12
-    # Java 13
+    # OpenJDK - Java 13
     - env: TARGET='-Pjava11' EXPERIMENTAL='true'
       jdk: openjdk-ea
-    # OpenJ9 11
+    # OpenJ9 - Java 11
     - env: JDK="OpenJ9 11" TARGET='-Pjava11' EXPERIMENTAL='false'
       before_script:
         - . ci/install-jdk.sh -W ~/custom-java --url "https://api.adoptopenjdk.net/v2/binary/releases/openjdk11?openjdk_impl=openj9&os=linux&arch=x64&release=latest&type=jdk&heap_size=normal"
