--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,25 +5,25 @@ jobs:
       - image: openjdk:6-jdk
     steps:
       - checkout
-      - run: ./mvnw verify -Pintegration -Pjava6 -s nossl.settings.xml -Dnet.bytebuddy.test.ci=true -pl '!byte-buddy-gradle-plugin'
+      - run: ./mvnw verify -Pintegration -Pjava6 -s nossl.settings.xml -Dnet.bytebuddy.test.ci=true
   jdk7:
     docker:
       - image: openjdk:7-jdk
     steps:
       - checkout
-      - run: ./mvnw verify -Pintegration -Pjava7 -Dnet.bytebuddy.test.ci=true -pl '!byte-buddy-gradle-plugin'
+      - run: ./mvnw verify -Pintegration -Pjava7 -Dnet.bytebuddy.test.ci=true
   jdk8:
     docker:
       - image: openjdk:8-jdk
     steps:
       - checkout
-      - run: ./mvnw verify -Pintegration -Pjava8 -Dnet.bytebuddy.test.ci=true -pl '!byte-buddy-gradle-plugin'
+      - run: ./mvnw verify -Pintegration -Pjava8 -Dnet.bytebuddy.test.ci=true
   coverage:
     docker:
       - image: openjdk:8-jdk
     steps:
       - checkout
-      - run: ./mvnw jacoco:prepare-agent test jacoco:report coveralls:report -Pintegration -Dnet.bytebuddy.test.ci=true -DrepoToken=$COVERALLS_REPO_TOKEN -pl '!byte-buddy-gradle-plugin'
+      - run: ./mvnw jacoco:prepare-agent test jacoco:report coveralls:report -Pintegration -Dnet.bytebuddy.test.ci=true -DrepoToken=$COVERALLS_REPO_TOKEN
 workflows:
   version: 2
   build_all:
