Downgrade exec plugin for Java 6.

--- a/byte-buddy-gradle-plugin/pom.xml
+++ b/byte-buddy-gradle-plugin/pom.xml
@@ -42,6 +42,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>${version.plugin.compiler}</version>
                 <configuration>
                     <skipMain>true</skipMain>
                     <skip>true</skip>
