--- a/pom.xml
+++ b/pom.xml
@@ -387,6 +387,7 @@
                 <version.plugin.checkstyle>2.15</version.plugin.checkstyle>
                 <version.plugin.compiler>3.6.2</version.plugin.compiler>
                 <version.plugin.spotbugs>3.1.0-RC8</version.plugin.spotbugs>
+                <version.plugin.exec>1.5.0</version.plugin.exec>
                 <version.plugin.plugin>3.5.2</version.plugin.plugin>
                 <version.plugin.shade>3.1.1</version.plugin.shade>
                 <version.plugin.surefire>2.22.1</version.plugin.surefire>
