--- a/byte-buddy-gradle-plugin/build.gradle
+++ b/byte-buddy-gradle-plugin/build.gradle
@@ -6,16 +6,15 @@ def outerPom = new XmlSlurper().parse(file('../pom.xml'))
 
 group = pom.parent.groupId.text().toString()
 version = pom.parent.version.text().toString()
-
 description = pom.description.text().toString()
 
 // Gradle cannot process all version strings such that JavaVersion.current() fails.
-def version = System.getProperty("java.version")
+def raw = System.getProperty("java.version")
 def current;
-if (!version.startsWith("1.") && version.contains(".")) {
-    current = JavaVersion.toVersion(version.substring(0, version.indexOf('.')))
+if (!raw.startsWith("1.") && raw.contains(".")) {
+    current = JavaVersion.toVersion(raw.substring(0, raw.indexOf('.')))
 } else {
-    current = JavaVersion.toVersion(version)
+    current = JavaVersion.toVersion(raw)
 }
 
 def sourceVersion = System.getProperty("net.bytebuddy.version.source")
