--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
       - image: openjdk:8-jdk
     steps:
       - checkout
-      - run: ./mvnw jacoco:prepare-agent test jacoco:report coveralls:report -Pintegration -Dnet.bytebuddy.test.ci=true -DrepoToken=$COVERALLS_REPO_TOKEN
+      - run: ./mvnw jacoco:prepare-agent test jacoco:report coveralls:report -Pintegration -Dnet.bytebuddy.test.ci=true -DrepoToken=$COVERALLS_REPO_TOKEN -pl '!byte-buddy-gradle-plugin'
 workflows:
   version: 2
   build_all:
