--- a/.travis.yml
+++ b/.travis.yml
@@ -15,25 +15,25 @@ install: echo "The default Travis install script is being skipped!"
 matrix:
   include:
     # OpenJDK - Java 9
-    - env: TARGET='-Pjava9' EXPERIMENTAL='false' SUFFIX=''
+    - env: TARGET='-Pjava9' EXPERIMENTAL='false' EXCLUDE=''
       jdk: openjdk9
     # OpenJDK - Java 10
-    - env: TARGET='-Pjava10' EXPERIMENTAL='false' SUFFIX=''
+    - env: TARGET='-Pjava10' EXPERIMENTAL='false' EXCLUDE=''
       jdk: openjdk10
     # OpenJDK - Java 11
-    - env: TARGET='-Pjava11' EXPERIMENTAL='false' SUFFIX=''
+    - env: TARGET='-Pjava11' EXPERIMENTAL='false' EXCLUDE=''
       jdk: openjdk11
     # OpenJDK - Java 12
-    - env: TARGET='-Pjava11' EXPERIMENTAL='true' SUFFIX=''
+    - env: TARGET='-Pjava11' EXPERIMENTAL='true' EXCLUDE=''
       jdk: openjdk12
     # OpenJDK - Java 13
-    - env: TARGET='-Pjava11' EXPERIMENTAL='true' SUFFIX='-pl \'!byte-buddy-gradle-plugin\''
+    - env: TARGET='-Pjava11' EXPERIMENTAL='true' EXCLUDE='-pl \'!byte-buddy-gradle-plugin\''
       jdk: openjdk13
     # OpenJDK - Java 14
-    - env: TARGET='-Pjava11' EXPERIMENTAL='true' SUFFIX='-pl \'!byte-buddy-gradle-plugin\''
+    - env: TARGET='-Pjava11' EXPERIMENTAL='true' EXCLUDE='-pl \'!byte-buddy-gradle-plugin\''
       jdk: openjdk-ea
     # OpenJ9 - Java 11
-    - env: JDK="OpenJ9 11" TARGET='-Pjava11' EXPERIMENTAL='false' SUFFIX =''
+    - env: JDK="OpenJ9 11" TARGET='-Pjava11' EXPERIMENTAL='false' EXCLUDE =''
       before_script:
         - . ci/install-jdk.sh -W ~/custom-java --url "https://api.adoptopenjdk.net/v2/binary/releases/openjdk11?openjdk_impl=openj9&os=linux&arch=x64&release=latest&type=jdk&heap_size=normal"
 
