--- a/.travis.yml
+++ b/.travis.yml
@@ -27,10 +27,10 @@ matrix:
     - env: TARGET='-Pjava11' EXPERIMENTAL='true' EXCLUDE=''
       jdk: openjdk12
     # OpenJDK - Java 13
-    - env: TARGET='-Pjava11' EXPERIMENTAL='true' EXCLUDE="-pl '!byte-buddy-gradle-plugin'"
+    - env: TARGET='-Pjava11' EXPERIMENTAL='true' EXCLUDE='-pl ''!byte-buddy-gradle-plugin'''
       jdk: openjdk13
     # OpenJDK - Java 14
-    - env: TARGET='-Pjava11' EXPERIMENTAL='true' EXCLUDE="-pl '!byte-buddy-gradle-plugin'"
+    - env: TARGET='-Pjava11' EXPERIMENTAL='true' EXCLUDE='-pl ''!byte-buddy-gradle-plugin'''
       jdk: openjdk-ea
     # OpenJ9 - Java 11
     - env: JDK="OpenJ9 11" TARGET='-Pjava11' EXPERIMENTAL='false' EXCLUDE =''
