Try new exclusion strategy.

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,10 +27,10 @@ matrix:
     - env: TARGET='-Pjava11' EXPERIMENTAL='true' EXCLUDE=''
       jdk: openjdk12
     # OpenJDK - Java 13
-    - env: TARGET='-Pjava11' EXPERIMENTAL='true' EXCLUDE='-pl ''!byte-buddy-gradle-plugin'''
+    - env: TARGET='-Pjava11' EXPERIMENTAL='true' EXCLUDE='byte-buddy-gradle-plugin'
       jdk: openjdk13
     # OpenJDK - Java 14
-    - env: TARGET='-Pjava11' EXPERIMENTAL='true' EXCLUDE='-pl ''!byte-buddy-gradle-plugin'''
+    - env: TARGET='-Pjava11' EXPERIMENTAL='true' EXCLUDE='byte-buddy-gradle-plugin'
       jdk: openjdk-ea
     # OpenJ9 - Java 11
     - env: JDK="OpenJ9 11" TARGET='-Pjava11' EXPERIMENTAL='false' EXCLUDE =''
@@ -38,5 +38,5 @@ matrix:
         - . ci/install-jdk.sh -W ~/custom-java --url "https://api.adoptopenjdk.net/v2/binary/releases/openjdk11?openjdk_impl=openj9&os=linux&arch=x64&release=latest&type=jdk&heap_size=normal"
 
 script:
-  - ./mvnw install ${TARGET} -DskipTests=true -Dmaven.javadoc.skip=true -Dnet.bytebuddy.experimental=${EXPERIMENTAL} -Dnet.bytebuddy.test.ci=true ${EXCLUDE}
-  - ./mvnw jacoco:prepare-agent verify jacoco:report ${TARGET} -Pintegration -Dnet.bytebuddy.experimental=${EXPERIMENTAL} -Dnet.bytebuddy.test.ci=true ${EXCLUDE}
+  - ./mvnw install ${TARGET} -DskipTests=true -Dmaven.javadoc.skip=true -Dnet.bytebuddy.experimental=${EXPERIMENTAL} -Dnet.bytebuddy.test.ci=true -pl '!${EXCLUDE}'
+  - ./mvnw jacoco:prepare-agent verify jacoco:report ${TARGET} -Pintegration -Dnet.bytebuddy.experimental=${EXPERIMENTAL} -Dnet.bytebuddy.test.ci=true -pl '!${EXCLUDE}'
