Rebind plugin publishing to deploy phase.

--- a/byte-buddy-gradle-plugin/pom.xml
+++ b/byte-buddy-gradle-plugin/pom.xml
@@ -102,7 +102,7 @@
                     </execution>
                     <execution>
                         <id>gradle-publish</id>
-                        <phase>install</phase>
+                        <phase>deploy</phase>
                         <goals>
                             <goal>exec</goal>
                         </goals>
