--- a/byte-buddy-agent/pom.xml
+++ b/byte-buddy-agent/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -140,7 +141,11 @@
                     <packages>${packages.list}</packages>
                     <exports>${packages.list}</exports>
                     <requires>java.instrument</requires>
-                    <static-requires>jdk.attach</static-requires>
+                    <static-requires>
+                        jdk.attach,
+                        com.sun.jna,
+                        com.sun.jna.platform
+                    </static-requires>
                 </configuration>
             </plugin>
         </plugins>
