--- a/byte-buddy-agent/pom.xml
+++ b/byte-buddy-agent/pom.xml
@@ -156,7 +156,7 @@
 
     <profiles>
         <profile>
-            <id>windows-compile</id>
+            <id>native-compile</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
             </activation>
